--- a/pages/jus-et-delices.html
+++ b/pages/jus-et-delices.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/D.png" rel="icon">
-  <link href="assets/img/D.png" rel="apple-touch-icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Lato:400,300,700,900" rel="stylesheet">
@@ -50,6 +50,9 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
+          <li><a class="nav-link scrollto active" href="cart.html">
+            <img src="assets/img/cart-icon/panier.png" class="img-fluid" alt="">
+          </a>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -85,7 +88,7 @@
               <div class="resto-wrap">
                 <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                 <div class="resto-info">
-                  <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 1">Resto 1</a></h3>
+                  <h3><a href="resto-details.html" title="Resto 1">Resto 1</a></h3>
                   <div>
                     <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                   </div>
@@ -97,7 +100,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 2">Resto 2</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 2">Resto 2</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -109,7 +112,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 3">Resto 3</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 3">Resto 3</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -121,7 +124,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 4">Resto 4</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 4">Resto 4</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -133,7 +136,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 5">Resto 5</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 5">Resto 5</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -145,7 +148,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 6">Resto 6</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 6">Resto 6</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -157,7 +160,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 7">Resto 7</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 7">Resto 7</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -169,7 +172,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 8">Resto 8</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 8">Resto 8</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -181,7 +184,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 9">Resto 9</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 9">Resto 9</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -193,7 +196,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 10">Resto 10</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 10">Resto 10</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -205,7 +208,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 11">Resto 11</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 11">Resto 11</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -217,7 +220,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 12">Resto 12</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 12">Resto 12</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -229,7 +232,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 13">Resto 13</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 13">Resto 13</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -241,7 +244,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 14">Resto 14</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 14">Resto 14</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -253,7 +256,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 15">Resto 15</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 15">Resto 15</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -265,7 +268,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 16">Resto 16</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 16">Resto 16</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -277,7 +280,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 17">Resto 17</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 17">Resto 17</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -289,7 +292,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 18">Resto 18</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 18">Resto 18</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -301,7 +304,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 19">Resto 19</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 19">Resto 19</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -313,7 +316,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 20">Resto 20</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 20">Resto 20</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -325,7 +328,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 21">Resto 21</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 21">Resto 21</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -337,7 +340,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 22">Resto 22</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 22">Resto 22</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -349,7 +352,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 23">Resto 23</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 23">Resto 23</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -361,7 +364,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 24">Resto 24</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 24">Resto 24</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -373,7 +376,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 25">Resto 25</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 25">Resto 25</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -385,7 +388,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 26">Resto 26</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 26">Resto 26</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -397,7 +400,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 27">Resto 27</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 27">Resto 27</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -409,7 +412,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 28">Resto 28</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 28">Resto 28</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -421,7 +424,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 29">Resto 29</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 29">Resto 29</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
@@ -433,7 +436,7 @@
                 <div class="resto-wrap">
                   <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                   <div class="resto-info">
-                    <h3><a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="restoGallery" class="resto-lightbox" title="Resto 30">Resto 30</a></h3>
+                    <h3><a href="resto-details.html" title="Resto 30">Resto 30</a></h3>
                     <div>
                       <a href="resto-details.html" title="Details"><i class="bi bi-eye"></i></a>
                     </div>
