--- a/pages/resto-details.html
+++ b/pages/resto-details.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/D.png" rel="icon">
-  <link href="assets/img/D.png" rel="apple-touch-icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Lato:400,300,700,900" rel="stylesheet">
@@ -50,6 +50,9 @@
           <li><a class="nav-link scrollto active" href="index.html">ACCUEIL</a></li>
           <!--li><a class="nav-link scrollto" href="login.html">SE CONNECTER</a></li!-->
           <li><a class="nav-link scrollto" href="contact.html">BESOIN D'AIDE?</a></li>
+          <li><a class="nav-link scrollto active" href="cart.html">
+            <img src="assets/img/cart-icon/panier.png" class="img-fluid" alt="">
+          </a>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -113,6 +116,9 @@
                     <h3><a>Sandwich Simple</a></h3>
                     <div>
                       <a style="color:white ;">800 fr</a>
+                    </div>
+                    <div>
+                      <a style="color:white ;" href="#">ajouter au panier</a>
                     </div>
                   </div>
                 </div>
